--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: Run tests
         run: uv run pytest -q
+
+      - name: Run tests with coverage
+        run: uv run pytest --cov=ib_positions
