--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
     "pytest-asyncio>=1.3.0",
     "black>=24.10.0",
     "flake8>=6.1.0",
